--- a/AndMongoDemo/build.gradle
+++ b/AndMongoDemo/build.gradle
@@ -12,6 +12,10 @@ repositories {
     mavenCentral()
 }
 
+dependencies {
+    compile project(':libraries:AndMongo:AndMongo')
+}
+
 android {
     compileSdkVersion 18
     buildToolsVersion "18.0.1"
