--- a/AndMongoDemo/build.gradle
+++ b/AndMongoDemo/build.gradle
@@ -13,6 +13,9 @@ repositories {
 }
 
 dependencies {
+    compile 'com.android.support:support-v4:13.0.+'
+    compile fileTree(dir: 'libs', include: '*.jar')
+
     compile project(':libraries:AndMongo:AndMongo')
 }
 
